# image-classification-cnn

./: pyproject.toml  requirements.txt
