[tool.poetry]
name = "image-classification-cnn"
version = "0.1.0"
description = ""
authors = ["ghudeihed <ghazi@hudeihed.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
