[tool.poetry]
name = "image-classification-cnn"
version = "0.1.0"
description = ""
authors = ["ghudeihed <ghazi@hudeihed.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
