[tool.poetry]
name = "image-classification-cnn"
version = "0.1.0"
description = ""
authors = ["ghudeihed <ghazi@hudeihed.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
torch = "^2.5.1"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
torchvision = "^0.20.1"
torchsummary = "^1.5.1"
scikit-learn = "^1.5.2"
optuna = "^4.1.0"
flask = "^3.1.0"
streamlit = "^1.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
